[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "crewai>=1.3.0",
    "crewai-tools>=1.3.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "networkx>=3.5",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "streamlit>=1.51.0",
]
